# SPR1D-Game

./: CMakeLists.txt  README.md  main.c
Fasi/: Inizio.c
Fasi/Finale/: Finale.c  Finale.h
Fasi/Scrematura/: Scrematura.c
Fasi/Svolgimento/: Svolgimento.c
Giochi/Biglie/: Biglie.c  Biglie.h
Giochi/Dadi/: Dadi.c
Giochi/Impiccato/: Impiccato.c  Impiccato.h
Giochi/MorraCinese/: MorraCinese.c  MorraCinese.h
Giochi/Murra/: Murra.c  Murra.h
Giochi/PariDispari/: PariDispari.c  PariDispari.h
Giochi/Tris/: Tris.c  Tris.h
SPR1DGAME/: CMakeCache.txt  CMakeLists.txt  Makefile  SPR1DGAME  cmake_install.cmake  main.c
SPR1DGAME/Fasi/: Fasi.h  Inizio.c
SPR1DGAME/Fasi/Finale/: Finale.c
SPR1DGAME/Fasi/Scrematura/: Scrematura.c  Scrematura.h
SPR1DGAME/Fasi/Svolgimento/: Svolgimento.c  Svolgimento.h
SPR1DGAME/Giochi/: Giochi.h
SPR1DGAME/Giochi/Biglie/: Biglie.c
SPR1DGAME/Giochi/Dadi/: Dadi.c  Dadi.h
SPR1DGAME/Giochi/Impiccato/: Impiccato.c
SPR1DGAME/Giochi/MorraCinese/: MorraCinese.c  MorraCinese.h
SPR1DGAME/Giochi/Murra/: Murra.c  Murra.h
SPR1DGAME/Giochi/PariDispari/: PariDispari.c
SPR1DGAME/Giochi/Tris/: Tris.c
SPR1DGAME/Utils/: Utils.h
Utils/: Utils.c  Utils.h
